# neo3-boa

./: .bumpversion.cfg  .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README.rst  bumpversion.py  env.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-or-enhancement-request.md  questions.md
.github/workflows/: main.yml
boa3/: __init__.py  boa3.py  cli.py  constants.py  cpm.py  env.py
boa3/analyser/: analyser.py  astanalyser.py  astoptimizer.py  builtinfunctioncallanalyser.py  constructanalyser.py  importanalyser.py  moduleanalyser.py  symbolscope.py  typeanalyser.py
boa3/analyser/model/: ManifestSymbol.py  functionarguments.py  symbolscope.py
boa3/analyser/optimizer/: Operation.py  __init__.py
boa3/analyser/supportedstandard/: __init__.py  standardanalyser.py
boa3/builtin/: __init__.py  math.py
boa3/builtin/compile_time/: __init__.py
boa3/builtin/contract/: Nep17Contract.py  __init__.py  neoaccountstate.py
boa3/builtin/interop/: __init__.py
boa3/builtin/nativecontract/: __init__.py  contractmanagement.py  cryptolib.py  gas.py  ledger.py  neo.py  oracle.py  policy.py  rolemanagement.py  stdlib.py
boa3/builtin/type/: __init__.py  helper.py
boa3/builtin/vm/: __init__.py
boa3/cli_commands/: __init__.py  build_command.py
boa3/compiler/: codegenerator.py  codegeneratorvisitor.py  compiledmetadata.py  compiler.py  compileroutput.py  filegenerator.py  generator.py  vmcodemapping.py
boa3/compiler/codegenerator/: __init__.py  codegenerator.py  codegeneratorvisitor.py  generatordata.py  initstatementsvisitor.py  methodtokencollection.py  stackmemento.py  variablegenerationdata.py  vmcodemap.py  vmcodemapping.py
boa3/exception/: CompilerError.py  CompilerWarning.py  NotLoadedException.py
boa3/helpers/: __init__.py
boa3/internal/: constants.py  deprecation.py  env.py  git_helper.py  utils.py
boa3/internal/analyser/: analyser.py  astanalyser.py  asthelper.py  astoptimizer.py  builtinfunctioncallanalyser.py  constructanalyser.py  importanalyser.py  moduleanalyser.py  typeanalyser.py
boa3/internal/cli_commands/: __init__.py  build_command.py  compile_command.py  icommand.py
boa3/internal/compiler/: compiledmetadata.py  compiler.py  compileroutput.py  filegenerator.py
boa3/internal/exception/: CompilerError.py  CompilerWarning.py  InvalidPathException.py
boa3/model/: __init__.py  attribute.py  callable.py  debuginstruction.py  decorator.py  event.py  expression.py  identifiedsymbol.py  importsymbol.py  method.py  module.py  package.py  property.py  symbol.py  variable.py
boa3/neo/: __init__.py
boa3/neo3/: __init__.py  blockchain.py
boa3/sc/: __init__.py
boa3_test/examples/: HTLC.py  HelloWorld.py  NEP17.py  README.md  amm.py  hello_world.py  htlc.py  ico.py  nep11_non_divisible.py  nep17.py  nep17onPaymentContract.py  nep5.py  simple_nep17.py  update_contract.py  wrapped_gas.py  wrapped_neo.py
boa3_test/test_cli/: MultipleWarnings.py
boa3_test/test_drive/: utils.py
boa3_test/tests/: annotation.py  boa_test.py  boatestcase.py  default.neo-express  event.py  run_unit_tests.py  stackitem.py  test_any.py  test_arithmetic.py  test_assert.py  test_boa_builtin_method.py  test_builtin_method.py  test_bytes.py  test_class.py  test_constant.py  test_dict.py  test_event.py  test_examples.py  test_exception.py  test_file_generation.py  test_for.py  test_function.py  test_if.py  test_import.py  test_interop.py  test_list.py  test_logical.py  test_metadata.py  test_multiple_expressions.py  test_neo_types.py  test_none.py  test_range.py  test_relational.py  test_storage.py  test_string.py  test_suite.py  test_test_engine.py  test_tuple.py  test_types.py  test_union.py  (+3 more)
docs/: .bumpversion.cfg  ContractExamplesTest.md  Makefile  make-pdf.py  make.bat  migration-guide-v0.14.0.md  migration-guide.md
docs/source/: calling-smart-contracts.md  code-reference.rst  compiling-your-smart-contract.rst  conceptual-overview.rst  conf.py  contribute.rst  debugger-ready.rst  examples.rst  getting-started.md  getting-started.rst  index.rst  install.rst  invoking-with-neonova.md  license.rst  overview.rst  package-reference.rst  project-structure.rst  python-supported-features.rst  testengine.rst  testing-and-debugging.md  tutorials.rst  unit-tests.rst
test_runner/: neo_test_runner.py  neoxp_utils.py  utils.py
test_runner/blockchain/: __init__.py  contract.py  contractcollection.py  log.py  storage.py  storagecollection.py
test_runner/neoxp/: batch.py  neoinvoke.py
(+3881 files in other folders)
